# table2firefly

./: .gitignore  CMakeLists.txt  README.md  environment.yml
.devcontainer/: Dockerfile
include/: csv_utils.h  table_processing.h
include/table2firefly/: table_processing.h
include/utils/: csv_utils.h  utils.h
src/: bill_classifier.py  bill_classifier_deepseek.py  bill_classifier_gemini.py  main.cpp  main.py  table_processing.cpp  table_processing.py
src/utils/: csv_utils.cpp
utils/: csv_utils.cpp
